# Utility

./: .gitignore  CMakeLists.txt  README.md
CliColor/: cliColor.hpp
content_loader/: content.hpp
dynamic_array/: dynamicarray.hpp  example.cpp
functionFitting/: CMakeLists.txt  example.cpp  lineFitting.hpp  lineFitting_example.cpp  parabolaFitting.cpp  parabolaFitting.hpp  parabolaFitting_example.cpp
optimizer/: CMakeLists.txt  DownhillSimplex.hpp  example.cpp
simple_functions/: functions.hpp
sql_cpp/: .clang-format  CMakeLists.txt  main.cpp
sql_cpp/include/sql_cpp/: column_list.hpp  operators.hpp  order_by.hpp  sql_cpp.hpp  sql_cpp_sqlite.hpp  table.hpp
sql_cpp/include/sql_cpp/detail/: clause.hpp  create_table.hpp  db_bind.hpp  delete_from.hpp  drop_table.hpp  insert.hpp  logicaloperators.hpp  nonlogicaloperators.hpp  operatorbase.hpp  select_from.hpp  static_string.hpp  table.hpp  twoparameteroperatortype.hpp  util.hpp  where_clause.hpp
thread_pool/: CMakeLists.txt  example.cpp  threadpool.hpp
